2010-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Improved detection of null values.

2010-05-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated to latest.

	* SoftDebuggerAdaptor.cs: Handle the new
	  AbsentInformationException.

2010-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftEvaluationContext.cs:
	* SoftDebuggerBacktrace.cs: Track api changes.

2010-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* PropertyValueReference.cs: Track api changes.

2010-05-04  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Don't redirect output/error when
	  using an external console. Use TargetProcess instead of
	  Process, since Process doesn't work for external consoles.

2010-04-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated from Mono.

	* SoftDebuggerSession.cs:
	* SoftDebuggerStartInfo.cs: Track API changes.

	* SoftDebuggerAdaptor.cs: The call to ToString may return
	  null. Return an empty string in this case. Fixes bug
	  #599434.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

2010-04-19  Carlo Kok  <ck@remobjects.com>
	* SoftDebuggerSession.cs:
	* SoftEvaluationContext.cs:
	  Allow for custom expression evaluator.

2010-04-14  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: When getting the members of a type,
	  take into account overriden virtual properties. Fixes bug
	  #580994 - MD debugger hover window ignores virtual.

2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Set the current request in the Step
	  Out command. Fixes bug #569418 - Debugger sometimes loses
	  track of stepping.

2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs:
	* SoftDebuggerStartInfo.cs: Fix external console support
	  again.
